--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@ img {
   -moz-transition: 0.3s ease all;
   -ms-transition: 0.3s ease all;
   -o-transition: 0.3s ease all;
+  aspect-ratio: 4/6;
 }
 
 img:hover {
@@ -23,17 +24,16 @@ img:hover {
 }
 
 .loading {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background: radial-gradient(farthest-side, #ffc639 95%, #0000) 50% 1px/24px
-      24px no-repeat,
-    radial-gradient(farthest-side, #0000 calc(100% - 28px), #e4e4ed 0);
-  animation: s9 1s infinite linear;
+  width:50px;
+  height:50px;
+  --c:radial-gradient(farthest-side,#ff6500 92%,#0000);
+  background: 
+    var(--c) 50% 0,
+    var(--c) 50% 100%,
+    var(--c) 100% 50%,
+    var(--c) 0    50%;
+  background-size:12px 12px;
+  background-repeat:no-repeat;
+  animation:s7 1s infinite;
 }
-
-@keyframes s9 {
-  to {
-    transform: rotate(1turn);
-  }
-}
+@keyframes s7 {to{transform: rotate(.5turn)}}
